--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,8 +1,8 @@
-h1,
+/* h1,
 h2,
 h3.location {
-    font-weight: 300
-}
+    font-weight: 200;
+} */
 
 a,
 body,
@@ -23,7 +23,7 @@ html {
 }
 
 .wrap {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     justify-content: center;
     height: 100%
@@ -33,19 +33,6 @@ html {
     text-align: center;
     width: 650px;
     margin: auto
-}
-#cvButton {
-  background-color: #c5cacc91;
-  font-family: 'Oswald', sans-serif;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 22px;
-  margin: 4px 2px;
-  cursor: pointer;
 }
 
 h1 {
@@ -72,12 +59,38 @@ a:hover {
 }
 
 .technologies {
-    background-color: #c5cacc91;
-    word-spacing: 10px
+    background-color: #020f16;
+    word-spacing: 7px;
+    font-size: 0.9em;
+    padding: 10px;
     }
+
+#jsappButton,
+#cvButton,
+#nodeJsButton {
+  width: 12.5em;
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 2% 2%;
+  margin: 5px;
+  text-align: center;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+#mobile{
+    padding-bottom: 8px;
+}
+
+#bio {
+    background-color: white;
+    color: black;
+}
 
 @media(max-width:960px) {
     .container {
-        width: 90%
+    width: 90%
     }
+
 }
