--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,7 @@
 /* 
-    Title: Dev Portfolio Template
-    Version: 1.2.2
-    Last Change: 03/25/2020
-    Author: Ryan Fitzgerald
-    Repo: https://github.com/RyanFitzgerald/devportfolio-template
-    Issues: https://github.com/RyanFitzgerald/devportfolio-template/issues
+    Title: Amar Mohammed CV
+    Version: 
+    Last Change:
 
     Description: This file contains all the styles associated with the page
     that don't come from third party libraries. This file gets compiled using
@@ -571,7 +568,7 @@ footer {
 }
 
 .project-image {
-    float: left
+    float: left;
 }
 
 .project-info {
@@ -579,7 +576,7 @@ footer {
     top: 50%;
     transform: translateY(-50%);
     margin-left: 300px;
-    padding: 15px
+    padding: 15px;
 }
 
 .project-info h3 {
